[package]
name = "telegram-tracing-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="telegram_tracing_layer"
path ="src/lib.rs"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = "0.12.2"
